# RulerMusic

./: CMakeLists.txt  Makefile  README.md
include/: MainWindow.hpp
src/: MainWindow.cpp  main.cpp
